Unrelated styling fix: result type boxes needed some breathing room on small screens

--- a/src/assets/styling/search-options.scss
+++ b/src/assets/styling/search-options.scss
@@ -10,6 +10,12 @@
   }
 }
 
+.lls-search-options__result-type {
+  @media (max-width: $breakpointSm) {
+    margin-top: 0.825rem;
+  }
+}
+
 .lls-search-options__result-type-checkboxes {
   display: flex;
 }
